5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1618_2937.log
== TEST (2019-04-02 11:07:11) 
-- CODE:
numero de mols = float(input("inserir mols"))
volume = float(input("volume"))
temperatura = float(input("temperatura"))
pressao = (numero de mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- ERROR:
File "XXXX", line 1
    numero de mols = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:07:35) 
-- CODE:
numero de mols = float(input(" inserir mols :"))
volume = float(input("volume"))
temperatura = float(input("temperatura"))
pressao = (numero de mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- ERROR:
File "XXXX", line 1
    numero de mols = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:07:46) 
-- CODE:
numero de mols = float(input(""))
volume = float(input("volume"))
temperatura = float(input("temperatura"))
pressao = (numero de mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- ERROR:
File "XXXX", line 1
    numero de mols = float(input(""))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:08:06) 
-- CODE:
numero_de_mols = float(input(""))
volume = float(input("volume"))
temperatura = float(input("temperatura"))
pressao = (numero de mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- ERROR:
File "XXXX", line 4
    pressao = (numero de mols * 0.082057 * (temperatura + 273.1)) / volume
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:08:55) 
-- CODE:
numero_de_mols = float(input(""))
volume = float(input("volume"))
temperatura = float(input("temperatura"))
pressao = (numero_de_mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- OUTPUT:
0.07515908343750001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:09:27) 
-- CODE:
numero_de_mols = float(input(""))
volume = float(input("volume"))
temperatura = float(input("temperatura"))
pressao = (numero_de_mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- OUTPUT:
0.07515908343750001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:09:42) 
-- CODE:
numero_de_mols = float(input("numero_de_mols"))
volume = float(input("volume"))
temperatura = float(input("temperatura"))
pressao = (numero_de_mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- OUTPUT:
0.07515908343750001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:09:54) 
-- CODE:
numero_de_mols = float(input("numero_de_mols: "))
volume = float(input("volume: "))
temperatura = float(input("temperatura: "))
pressao = (numero_de_mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- OUTPUT:
0.07515908343750001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:10:30) 
-- CODE:
numero_de_mols = float(input("numero_de_mols: "))
volume = float(input("volume: "))
temperatura = float(input("temperatura: 1"))
pressao = (numero_de_mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- OUTPUT:
0.07515908343750001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:10:53) 
-- CODE:
numero_de_mols = float(input("numero_de_mols: "))
volume = float(input("volume: "))
temperatura = float(input("temperatura: 1"))
pressao = (numero_de_mols * 0.082057 * (temperatura + 273.1)) / volume
print(pressao)
-- EXECUTION TIME:
0.173052
-- TEST CASE 1:
---- input:
1
320.0
20.0
---- correct output:
0.07515908343750001
---- user output:
0.07515908343750001
-- TEST CASE 2:
---- input:
5
155.8
80.0
---- correct output:
0.9298564409499358
---- user output:
0.9298564409499358
-- TEST CASE 3:
---- input:
12
1220.0
30.0
---- correct output:
0.244637475737705
---- user output:
0.244637475737705
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
